--- a/index.html
+++ b/index.html
@@ -198,17 +198,17 @@
                         <!-- Image 1: Purple Jacket (Lifestyle) -->
                         <div class="absolute top-0 left-0 w-2/3 h-64 transform -rotate-3 hover:rotate-0 transition duration-500 z-10 group">
                             <img 
-                                src="image7.jpg" 
+                                src="image7.jpeg" 
                                 alt="Lifestyle" 
                                 class="w-full h-full object-cover rounded-xl shadow-lg border-4 border-white group-hover:scale-105 transition"
                                 loading="lazy"
                                 onerror="this.onerror=null; this.src='https://placehold.co/300x200/F3E4D9/1D2A4D?text=Lifestyle+Shot';"
                             >
                         </div>
-                        <!-- Image 2: White Dress (Travel) -->
+                        <!-- Image 2: Siting in the boat (Travel) -->
                         <div class="absolute top-40 right-0 w-3/5 h-64 transform rotate-6 hover:rotate-0 transition duration-500 z-20 group">
                             <img 
-                                src="image2.jpeg" 
+                                src="image8.jpeg" 
                                 alt="Travel" 
                                 class="w-full h-full object-cover rounded-xl shadow-lg border-4 border-white group-hover:scale-105 transition"
                                 loading="lazy"
@@ -218,7 +218,7 @@
                         <!-- Image 3: Instagram Frame -->
                         <div class="absolute bottom-0 left-10 w-2/3 h-72 transform -rotate-2 hover:rotate-0 transition duration-500 z-30 group">
                             <img 
-                                src="image1.jpeg" 
+                                src="image6.jpeg" 
                                 alt="Social" 
                                 class="w-full h-full object-cover rounded-xl shadow-lg border-4 border-white group-hover:scale-105 transition"
                                 loading="lazy"
