--- a/index.html
+++ b/index.html
@@ -451,9 +451,8 @@
                     </div>
                     <!-- Social Links -->
                     <div class="flex justify-center space-x-6 pt-4">
-                        <a href="https://www.instagram.com/your-username" target="_blank" class="text-3xl text-brand-pink hover:text-white transition duration-300 transform hover:scale-110" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.tiktok.com/@your-username" target="_blank" class="text-3xl text-brand-pink hover:text-white transition duration-300 transform hover:scale-110" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-                        <a href="https://www.youtube.com/your-channel" target="_blank" class="text-3xl text-brand-pink hover:text-white transition duration-300 transform hover:scale-110" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/@the_petite_footstep" target="_blank" class="text-3xl text-brand-pink hover:text-white transition duration-300 transform hover:scale-110" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        
                     </div>
                 </div>
 
