--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <!-- Stat 1: Followers (Updated to 3500+) -->
                     <div class="bg-white/10 p-6 rounded-xl backdrop-blur-sm reveal">
                         <i class="fas fa-users text-4xl text-brand-pink mb-3"></i>
-                        <p class="text-4xl font-bold text-white font-heading">3750+</p>
+                        <p class="text-4xl font-bold text-white font-heading">3900+</p>
                         <p class="text-lg text-gray-200">Total Followers</p>
                     </div>
 
@@ -447,11 +447,11 @@
                     </div>
                     <div class="flex items-center justify-center gap-4">
                         <i class="fas fa-phone text-brand-pink text-2xl"></i>
-                        <span class="text-lg">+44 7435385899</span>
+                        <span class="text-lg"></span>
                     </div>
                     <!-- Social Links -->
                     <div class="flex justify-center space-x-6 pt-4">
-                        <a href="https://www.instagram.com/@the_petite_footstep" target="_blank" class="text-3xl text-brand-pink hover:text-white transition duration-300 transform hover:scale-110" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/the_petite_footstep?igsh=dHlkcG5vNzk4aHV5&utm_source=qr" target="_blank" class="text-3xl text-brand-pink hover:text-white transition duration-300 transform hover:scale-110" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         
                     </div>
                 </div>
